# linky

./: README.md  pyproject.toml  report.md
linky/: app.py
linky/static/: styles.css
linky/templates/: page.html
shortlinks/: app.py
shortlinks/templates/: expired.html
